# chat-scripture

./: .gitignore  pyproject.toml  requirements.txt  sample_initial_setup.sh
.streamlit/: config.toml  version_info.md
docs/: app_main.md
notebooks/: get-all-scripture.ipynb  test-st-chatdocs.ipynb
src/: ChatScripture.py  bible.py  st_chatdocs.py  st_helper.py
