
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "streamlit>=1.23.1",
    "watchdog>=3.0.0",
    "meaningless>=1.0.0",
    "tomli>=2.0.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "notebook>=6.5.4",
]
